--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,41 @@
+@import "./helpers/scss/media-queries.scss";
+
 .app {
+  .app__title {
+    position: relative;
+    font-size: 32px;
+    line-height: 32px;
+    font-weight: 600;
+    text-align: center;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+
+    @include mq-large() {
+      font-size: 44px;
+      line-height: 44px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 5px;
+      background: rgb(255, 10, 10);
+      background: linear-gradient(
+        90deg,
+        rgba(255, 10, 10, 1) 0%,
+        rgba(255, 255, 255, 1) 50%,
+        rgba(134, 255, 32, 1) 100%
+      );
+    }
+  }
+
+  .app__score {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 30px;
+  }
 }
