--- a/src/components/field/field.scss
+++ b/src/components/field/field.scss
@@ -1,3 +1,5 @@
+@import "../../helpers/scss/color-variables.scss";
+
 .field {
   width: 25%;
 }
@@ -7,12 +9,13 @@
 }
 
 .field__button {
+  position: relative;
   width: 100%;
   padding-top: 100%;
   cursor: pointer;
   border: none;
   border-radius: 0;
-  background-color: white;
+  background-color: $c-white;
 }
 
 .field__button.field__button--disabled {
@@ -20,10 +23,62 @@
   cursor: default;
 }
 
-.field__button--player-1 {
-  background-color: red;
+.field__button--player-1,
+.field__button--player-1-hover:hover,
+.field__button--player-1-hover:focus,
+.field__button--player-1-hover:active {
+  position: relative;
+  opacity: 0.2;
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    border-radius: 16px;
+    background-color: $c-red;
+  }
+  &::before {
+    transform: rotate(45deg);
+  }
+  &::after {
+    transform: rotate(-45deg);
+  }
 }
 
+.field__button--player-2,
+.field__button--player-2-hover:hover,
+.field__button--player-2-hover:focus,
+.field__button--player-2-hover:active {
+  position: relative;
+  opacity: 0.2;
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: $c-green;
+  }
+  &::before {
+    width: 80%;
+    height: 80%;
+  }
+  &::after {
+    width: 70%;
+    height: 70%;
+    background-color: $c-white;
+  }
+}
+
+.field__button--player-1,
 .field__button--player-2 {
-  background-color: blue;
+  transition: opacity 250ms linear;
+  opacity: 1;
 }
