--- a/src/components/board/board.scss
+++ b/src/components/board/board.scss
@@ -1,6 +1,10 @@
 @import "../../helpers/scss/media-queries.scss";
 
 .board {
+  position: relative;
+}
+
+.board__fields {
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -12,4 +16,30 @@
     width: 50%;
     max-width: 500px;
   }
+}
+
+.board__fields--opacity {
+  opacity: 0.2;
+  transition: opacity 200ms linear;
+}
+
+.board__message {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 26px;
+  line-height: 26px;
+  font-weight: 600;
+  opacity: 0;
+  @include mq-large() {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+.board__message--opacity {
+  opacity: 1;
+  transition: opacity 500ms linear;
 }
