--- a/src/components/player/player-score.scss
+++ b/src/components/player/player-score.scss
@@ -5,30 +5,22 @@
   text-align: center;
 }
 
-.player-score--red.player-score--color {
-  background: rgb(255, 10, 10);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 10, 10, 1) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
+.player-score--red.player-score--visible-color {
+  @extend %red-white;
 }
 
-.player-score--green.player-score--color {
-  background: rgb(255, 255, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(134, 255, 32, 1) 100%
-  );
+.player-score--green.player-score--visible-color {
+  @extend %white-green;
 }
 
 .player-score__text {
   font-size: 20px;
+  line-height: 20px;
   font-weight: 600;
 }
 
 .player-score__value {
   font-size: 24px;
+  line-height: 24px;
   margin-top: 5px;
 }
