--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    margin-top: 30px;
+    margin: 30px auto 0 auto;
+    max-width: 800px;
   }
 
   .app__restart {
